syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";

package Akka.Pathfinder;
option csharp_namespace = "Akka.Pathfinder.Grpc";
 
service Pathfinder {
  rpc FindPath (stream FindPathRequest) returns (stream FindPathResponse);
  rpc GetPath(GetPathRequest) returns (GetPathResponse);
}

message FindPathRequest {
    string pathfinder_id = 1;
    int32 source_point_id = 2;
    int32 target_point_id = 3;
    Direction direction = 4;
    google.protobuf.Duration duration = 5;
}

message FindPathResponse{
    bool success = 1;
    string error_message = 2;
    string path_id = 3;
    int32 path_cost = 4;
    string pathfinder_id = 5;
}

message GetPathRequest{
    string path_id = 1;
    string pathfinder_id = 2;
}

message GetPathResponse{
    bool success = 1;
    string error_message = 2;
    repeated Point path = 3;
}

message Point{
    int32 point_id = 1;
    uint32 cost = 2;
    Direction direction = 3;
}

message KEKW {
  string message = 1;
  google.protobuf.Timestamp time = 2;
  google.protobuf.Duration duration = 3;
  google.protobuf.Empty kekw = 4;
}

enum Direction
{
    DIRECTION_NONE = 0;
    DIRECTION_TOP = 1;
    DIRECTION_BOTTOM = 2;
    DIRECTION_LEFT = 3;
    DIRECTION_RIGHT = 4;
    DIRECTION_FRONT = 5;
    DIRECTION_BACK = 6;
}